--- a/templates/squid.conf.j2
+++ b/templates/squid.conf.j2
@@ -82,9 +82,9 @@ http_access allow localhost
 # And finally deny all other access to this proxy
 http_access deny all
 
-# Place here customized error pages in case of access denied
-deny_info 403:ERR_ACCESS_DENIED all
-deny_info 404:ERR_ACCESS_DENIED all
+error_directory /etc/squid/locale-ru
+error_default_language ru
+
 
 # Squid normally listens to port 3128
 http_port 3128
